test for external library